[project]
name = "ABRpresto"
description = "Algorithm for algorithmic ABR thresholding by cross-correlation of resampled subaverage"
requires-python = ">=3.7"
license = {text = "Proprietary (not open source)"}
authors = [
    {name = "Luke Shaheen", email="Luke.Shaheen@regeneron.com"},
    {name = "Buran Consulting, LLC", email="info@bradburan.com"}
]
maintainers = [
    {name = "Luke Shaheen", email="Luke.Shaheen@regeneron.com"},
    {name = "Buran Consulting, LLC", email="info@bradburan.com"}
]
dependencies = [
	"numpy >=1.16.4",
	"scipy >=1.2.1",
	"pandas >=0.24.2",
	"matplotlib >=3.0.0",
    	"setuptools_scm",
]
dynamic = ["version"]

[project.scripts]
ABRpresto = "ABRpresto.main:main_process"

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ABRpresto"]

[tool.setuptools_scm]
write_to = "ABRpresto/_version.py"
